--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
-.App {
-  text-align: center;
-  justify-content: center;
-  padding: 200px
+
+
+.Title{
+  color: rgb(250, 0, 0);
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+  font-weight: bold;
+  margin: 0;
 }
+
+.header {
+  text-align: center;
+}
+
+.App {
+  text-align: left;
+  justify-content: left;
+  padding: 20px;
+}
+.form-control {
+  margin-bottom: 20px;
+}
+ul {
+  list-style: none;
+}
+
+
+
+/* .button {
+  background-color: rgb(22, 219, 219);;
+} */
