--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-
-
-.Title{
+.Title {
   color: rgb(250, 0, 0);
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
@@ -25,8 +23,6 @@ ul {
   list-style: none;
 }
 
-
-
-/* .button {
-  background-color: rgb(22, 219, 219);;
-} */
+.button {
+  background-color: rgb(220, 0, 0);
+}
