--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,19 @@
   margin-top: 10px;
   margin-bottom: 17px;
 }
+.display-4 {
+  text-decoration: underline;
+  text-decoration-color: #ab0c2f;
+}
 
+.container.homepage {
+  text-align: left;
+}
 .bg-cover {
   background-attachment: static;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 500px;
+  background-size: contain;
   height: 660px;
 }
 
@@ -39,6 +46,17 @@ ul {
 }
 .card {
   margin-bottom: 30px;
+}
+
+a.nav-link {
+  color: #ab0c2f;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+a.nav-link:hover,
+a.nav-link:active {
+  text-decoration: underline;
 }
 
 #inlineFormInput {
